# FarmersMarket

./: .gitignore  README.md  elm.json
the-barn/: .env  .gitignore  Cargo.toml  README.md  package.yaml
the-barn/app/: DevelMain.hs  devel.hs
the-barn/config/: keter.yml  settings.yml  test-settings.yml
the-barn/migrations/2020-02-20-202525_producers/: down.sql  up.sql
the-barn/migrations/2020-02-20-204018_create_tables/: down.sql  up.sql
the-barn/migrations/2020-02-21-212827_update_initial_tables/: down.sql  up.sql
the-barn/migrations/2020-02-23-205252_remove_geolocation/: down.sql  up.sql
the-barn/migrations/2020-02-25-013306_string_type_to_tinyint/: down.sql  up.sql
the-barn/src/: lib.rs  main.rs  schema.rs
the-barn/src/api/: mod.rs
the-barn/src/api/components/: mod.rs
the-barn/src/api/components/address/: geolocation.rs  mod.rs  model.rs
the-barn/src/api/components/consumer/: controller.rs  mod.rs  model.rs  routes.rs  service.rs
the-barn/src/api/components/item/: model.rs
the-barn/src/api/components/market/: controller.rs  mod.rs  model.rs  routes.rs  service.rs
the-barn/src/api/components/producer/: controller.rs  mod.rs  model.rs  routes.rs  service.rs
the-barn/src/api/components/user_group/: model.rs
the-barn/src/database/: mod.rs
the-barn/src/models/: address.rs  consumer.rs  item.rs  market.rs  mod.rs  producer.rs  user.rs  user_group.rs
the-yard/: elm.json  package-lock.json
the-yard/src/: BootTest.elm  Login.elm  Main.elm  boottest.js  index.html  login.js
