[package]
name = "the-barn"
version = "0.1.0"
authors = ["Noah Brabec <noah.brabec@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.17.1"
rocket = "0.4.2"
serde = "1.0.104"
serde_json = "1.0"
serde_derive = "1.0"
rocket_contrib = "0.4.2"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"