[package]
name = "the-barn"
version = "0.1.0"
authors = ["Noah Brabec <noah.brabec@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#postgres = "0.17.1"
rocket = "0.4.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
serde_derive = "1.0.104"
rocket_contrib = "0.4.2"
uuid = { version = "0.6.5", features = ["v4", "serde"] }
diesel = { version = "1.0.0", features = ["postgres", "uuid", "serde_json"] }
dotenv = "0.9.0"